--- a/src/views/components/room-in-hs.ejs
+++ b/src/views/components/room-in-hs.ejs
@@ -85,7 +85,7 @@
             />
           </g>
         </svg>
-        <p href="#">Chính sách hủy phòng</p>
+        <a href="#">Chính sách hủy phòng</a>
       </div>
       <div class="price__room">
         <p class="before-discount">VND 2.500.000</p>
