Up credit-account-popup

--- a/src/public/styles/components/credit-account-popup.css
+++ b/src/public/styles/components/credit-account-popup.css
@@ -1,16 +1,15 @@
-.modal {
+.modal2 {
     position: fixed;
     display: none;
-    z-index: 100;
+    z-index: 99;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.2);
 }
-
-.account {
-    height: 457px;
+.credit {
+    height: 810px;
     width: 840px;
     box-sizing: border-box;
 }
@@ -22,22 +21,27 @@ h1 {
     padding-bottom: 35px;
 }
 
-.account-container {
-    /* padding: 160px; */
-    margin-top: 100px;
+h2 {
+    font-size: 24px;
+    padding-top: 40px;
+}
+
+.credit-container {
+    padding: 160px;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     animation: modalFadeIn ease 0.5s;
 }
 
-.account__card {
+.credit__card {
     /* width: 764px;
-  height: 391px; */
+    height: 391px; */
     text-align: left;
     background-color: #ffffff;
     border-radius: 8px;
-    padding: 32px 38px 34px 38px;
+    padding: 25px;
     box-shadow: 0 10px 40px -20px black;
     position: relative;
 }
@@ -48,38 +52,82 @@ h1 {
     align-items: center;
 }
 
+.credit__secure {
+    display: flex;
+    /* flex-direction: row; */
+    align-items: center;
+    gap: 15px;
+    padding: 20px 7px;
+    background: #f1fff3;
+}
+
+.icon span {
+    font-size: 85px;
+    color: #119726;
+}
+
+.info--title {
+    font-size: 22px;
+    margin: 0;
+}
+
+.info--text {
+    font-size: 16px;
+    margin: 0;
+    padding-top: 10px;
+}
+
+.credit__details {
+    display: flex;
+    align-items: end;
+    gap: 450px;
+}
+
 .form--item {
     display: flex;
-    gap: 25px;
+    gap: 12px;
     padding: 10px 0;
     align-items: center;
 }
 
-.form-control:disabled::placeholder {
-    color: black;
+.form--item-2 {
+    display: flex;
+    gap: 12px;
+    padding: 10px 0;
+    align-items: center;
 }
 
-.form--item h2 {
-    width: 189px;
+.form--item h3 {
+    width: 191px;
+    font-size: 22px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+.form--item-2 h3 {
+    /* width: 189px; */
     font-size: 22px;
     display: flex;
     justify-content: flex-end;
     padding-top: 8px;
+    padding: 10px;
 }
 
-.form--item--notice {
-    width: 189px;
-    font-size: 22px;
-    margin: -10px 0;
+.input-1 {
+    width: 191px;
 }
 
-.form--item--notice p {
-    font-size: 14px;
-    text-align: right;
+.input-2 {
+    width: 107px;
 }
 
 .form--item input {
-    width: 526px;
+    width: 587px;
+    height: 48px;
+}
+.form--item-2 input {
+    width: 230px;
     height: 48px;
 }
 
@@ -88,25 +136,14 @@ h1 {
     height: 48px;
 }
 
-.form-control:disabled {
-    border: none;
-    background-color: white;
-}
-
-.form-control.unfilled:disabled::placeholder {
-    border: none;
-    background-color: white;
-    color: #bec8c9;
-}
-
-.account__button {
+.credit__button {
     display: inline-flex;
-    gap: 13px;
-    padding-left: 522px;
+    gap: 11px;
+    padding-left: 551px;
     margin: 18px 0 0 0;
 }
 
-.account__button--submit1 {
+.credit__button--submit1 {
     width: 96px;
     height: 48px;
     border-radius: 8px;
@@ -116,7 +153,7 @@ h1 {
     font-size: 16px;
 }
 
-.account__button--submit2 {
+.credit__button--submit2 {
     width: 131px;
     height: 48px;
     border-radius: 8px;
@@ -126,21 +163,21 @@ h1 {
     font-size: 16px;
 }
 
-.account__close--btn {
+.credit__close--btn {
     position: absolute;
     top: 16px;
     right: 19px;
 }
 
-.account__close--btn span {
+.credit__close--btn span {
     color: #00696d;
 }
 
-.account__button:hover {
+.credit__button:hover {
     opacity: 0.9;
 }
 
-.account__button[disabled] {
+.credit__button[disabled] {
     opacity: 0.6;
     cursor: default;
 }
