--- a/src/public/styles/components/credit-account-popup.css
+++ b/src/public/styles/components/credit-account-popup.css
@@ -7,6 +7,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.2);
+    overflow: auto;
 }
 .credit {
     height: 810px;
@@ -44,6 +45,7 @@ h2 {
     padding: 25px;
     box-shadow: 0 10px 40px -20px black;
     position: relative;
+    overflow-y: visible;
 }
 
 .form--items {
