--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -20,7 +20,7 @@
     <%- include('../partials/header-full') %>
       <main>
         <section id="discover-section" class="mt-64 primary-text">
-          <h1 class="section__title">Khám phá về 2Way</h1>
+          <h1 class="section__title">Khám phá về 2Ways</h1>
           <div class="section__centent mt-64 slider">
             <div class="slider__wrapper">
               <img src="/imgs/discover__image1.png" alt="Image 1"
