--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -9,6 +9,17 @@
     font-weight: 500;
 } */
 
+/* * {
+    margin: 0;
+    padding: 0;
+    color: #ffffff;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    font-weight: 500;
+} */
+
 header {
     display: flex;
     align-items: center;
@@ -29,6 +40,14 @@ header {
     align-items: center;
     width: 80%;
 }
+
+/* .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+} */
+
 .container__header--top {
     display: flex;
     align-items: center;
@@ -66,6 +85,30 @@ header {
     display: inline;
     margin: 0 24px;
     padding-top: 13px;
+  width: 656px;
+  /* height: 48px; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.container__nav--top ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0px;
+  margin: 0px;
+  gap: 12px;
+  /* height: 65px; */
+}
+
+.container__nav--top ul li {
+  display: inline;
+  margin: 0 24px;
+  padding-top: 13px;
 }
 
 .container__nav--top ul li a {
