--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="contact">
             <h3>2WAYS.com</h3>
             <p>Việc đặt phòng của bạn là động lực cho chúng tôi tiếp tục duy trì
-                                                được công ty.</p>
+                                                                                                                                                                được công ty.</p>
             <p>Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội</p>
             <div class="contact__social social">
                 <a href="#"><img class="social__logo" src="/imgs/brands/fb_logo.webp" alt="Facebook_"/></a>
@@ -11,7 +11,6 @@
                 <a href="#"><img class="social__logo" src="/imgs/brands/youtube_logo.png" alt="YouTube"></a>
             </div>
         </div>
-
         <div class="about">
             <h3>Công ty</h3>
             <div class="about__list">
@@ -29,4 +28,4 @@
             </form>
         </div>
     </div>
-</div></footer>
+</footer>
