--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -1,93 +1,94 @@
 footer {
-    height: 300px;
-    display: inherit;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 1px solid gray;
+  height: 300px;
+  display: inherit;
+  align-items: center;
+  justify-content: space-between;
+  /* border-top: 1px solid gray; */
+  background-color: #f6f6f6;
 }
 
 .footer-container {
-    width: 80%;
-    margin: 0 auto;
-    display: inherit;
-    justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+  display: inherit;
+  justify-content: space-between;
 }
 
 .contact {
-    width: 39%;
-    display: inherit;
-    flex-direction: column;
-    gap: 16px;
+  width: 39%;
+  display: inherit;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .contact h3,
 .about h3,
 .update h3 {
-    font-size: 1.375rem;
-    margin: 0;
+  font-size: 1.375rem;
+  margin: 0;
 }
 
 .contact p {
-    font-size: 1rem;
-    margin: 0;
+  font-size: 1rem;
+  margin: 0;
 }
 
 .contact__social {
-    display: inherit;
-    gap: 16px;
+  display: inherit;
+  gap: 16px;
 }
 
 .social__logo {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .about {
-    width: 13%;
-    display: inherit;
-    flex-direction: column;
-    gap: 16px;
+  width: 13%;
+  display: inherit;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .about__list {
-    display: inherit;
-    flex-direction: column;
-    gap: 12px;
+  display: inherit;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .about__link {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .update {
-    width: 39%;
-    display: inherit;
-    flex-direction: column;
-    gap: 16px;
+  width: 39%;
+  display: inherit;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .update form {
-    display: inherit;
-    gap: 12px;
+  display: inherit;
+  gap: 12px;
 }
 
 .update__input-field {
-    width: 65%;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px #ebebeb solid;
-    box-sizing: border-box;
-    padding: 0 16px
+  width: 65%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px #ebebeb solid;
+  box-sizing: border-box;
+  padding: 0 16px;
 }
 
 .update__confirm-btn {
-    height: 48px;
-    border-radius: 8px;
-    background-color: #FE9C0B;
-    color: white;
-    border: none;
-    box-sizing: border-box;
-    padding: 0 24px;
-    font-size: 0.875rem;
+  height: 48px;
+  border-radius: 8px;
+  background-color: #fe9c0b;
+  color: white;
+  border: none;
+  box-sizing: border-box;
+  padding: 0 24px;
+  font-size: 0.875rem;
 }
