--- a/src/views/pages/about-us.ejs
+++ b/src/views/pages/about-us.ejs
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <title>2WAYS.com</title>
-    <link rel="stylesheet" href="/styles/pages/about-us.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous" />
+  <title>2WAYS.com</title>
+  <link rel="stylesheet" href="/styles/pages/about-us.css" />
+</head>
 
-  <body>
-    <%- include('../partials/header-small') %>
-    <%- include('../partials/nav-tree', { items: ['Trang chủ', 'Về chúng tôi'] }) %>
+<body>
+  <%- include('../partials/header-small') %>
+    <%- include('../partials/nav-tree', { items: ['Trang chủ', 'Về chúng tôi' ]
+      }) %>
 
-    <main>
-      <section id="discover-section" class="mt-64 primary-text">
-        <h1 class="section__title">Khám phá về 2Way</h1>
-      </section>
-      <section id="banner" class="mt-64">
-        <img class="banner__img" src="/imgs/banner.png" alt="" />
-        <img class="banner__logan" src="/imgs/banner__logan.svg" alt="" />
-      </section>
-    </main>
+      <main>
+        <section id="discover-section" class="mt-64 primary-text">
+          <h1 class="section__title">Khám phá về 2Way</h1>
+        </section>
+        <section id="banner" class="mt-64">
+          <img class="banner__img" src="/imgs/banner.png" alt="" />
+          <img class="banner__logan" src="/imgs/banner__logan.svg" alt="" />
+        </section>
+      </main>
 
-    <%- include('../partials/footer') %>
-  </body>
+      <%- include('../partials/footer') %>
+</body>
 </html>
