--- a/src/views/pages/account-page/booking-history.ejs
+++ b/src/views/pages/account-page/booking-history.ejs
@@ -66,24 +66,8 @@
         </div>
       </section>
     </div>
-    <nav aria-label="Page navigation example ">
-      <ul
-        class="pagination"
-        style="width: 1152px; margin-left: 1004px; margin-top: 30px"
-      >
-        <li class="page-item">
-          <a class="page-link" href="#"> < </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">...</a></li>
-        <li class="page-item"><a class="page-link" href="#">10</a></li>
-        <li class="page-item"><a class="page-link" href="#"> > </a></li>
-      </ul>
-    </nav>
-
-    <%- include('../../components/review-popup.ejs') %>
+    <%- include('../../components/next-page.ejs') %> <%-
+    include('../../components/review-popup.ejs') %>
     <%-include('../../partials/footer.ejs') %>
 
     <script src="/scripts/booking-history.js"></script>
