--- a/src/public/styles/pages/account-page/booking-history.css
+++ b/src/public/styles/pages/account-page/booking-history.css
@@ -3,6 +3,8 @@
 @import url("/styles/components/room-in-hs.css");
 @import url("/styles/partials/footer.css");
 @import url("/styles/components/review-popup.css");
+@import url("/styles/components/next-page.css");
+
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -85,14 +87,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.page-link {
-    color: black;
-    font-weight: 500;
-    background-color: rgba(0, 105, 109, 0.2);
-    margin: 0 8px;
-    border-radius: 4px;
 }
 
 .profileBtn,
