Fix next-page, up component search-bar, fix header-full and medium done

--- a/src/public/styles/pages/index.css
+++ b/src/public/styles/pages/index.css
@@ -1,4 +1,5 @@
 @import url("/styles/partials/header-full.css");
+@import url("/styles/components/search-bar.css");
 @import url("/styles/partials/footer.css");
 
 .section__title {
@@ -62,7 +63,7 @@
 }
 
 #voucher-section {
-  & .section__content>* {
+  & .section__content > * {
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -86,7 +87,7 @@
 }
 
 #partners-section {
-  & .section__content>* {
+  & .section__content > * {
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -131,7 +132,7 @@
 }
 
 #factor-section {
-  & .section__content>* {
+  & .section__content > * {
     display: flex;
     flex-direction: row;
     gap: 1rem;
