--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -14,7 +14,7 @@
         <p>Chào,</p>
         <p>Giau Phan</p>
         <img src="" alt="" />
-        <img src="/imgs/logo-white.png" alt="" />
+        <!-- <img src="/imgs/logo-white.png" alt="" /> -->
       </div>
     </div>
   </div>
