--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -1,14 +1,12 @@
 <header>
-  <div class="container">
+  <div class="container__header">
     <div class="container__header--top">
       <div class="logo-img">
         <img src="/imgs/logo-white.png" alt="" />
       </div>
       <div class="container__nav--top">
-        <ul>
-          <li><a href="#">Trang chủ</a></li>
-          <li><a href="#">Thông báo</a></li>
-        </ul>
+        <a href="#">Trang chủ</a>
+        <a href="#">Thông báo</a>
       </div>
       <div class="top-authenticator">
         <!-- Header with no login -->
@@ -42,39 +40,7 @@
       <h3>Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ,...</h3>
     </div>
 
-    <div class="main--search">
-      <div class="search__wrapper">
-        <div class="search-address">
-          <span class="material-symbols-outlined"> location_on </span>
-          <input class="input_address" type="text" placeholder="Nơi muốn đến" />
-        </div>
-
-        <div class="search-address" style="border-left: 1px solid #90a6b1">
-          <span class="material-symbols-outlined"> calendar_month </span>
-          <input
-            class="input_address"
-            type="text"
-            placeholder="Ngày nhận - Ngày trả"
-          />
-        </div>
-
-        <div class="search-address" style="border-left: 1px solid #90a6b1">
-          <span class="material-symbols-outlined"> person </span>
-          <input
-            class="input_address"
-            type="text"
-            placeholder="1 người lớn - 0 trẻ em - 1 phòng"
-            style="width: 250px"
-          />
-        </div>
-      </div>
-
-      <!-- <button class="button--submit">Tìm kiếm</button> -->
-      <button class="button--submit btn--filled sec" type="submit">
-        <div class="status-layer">
-          <span>Tìm kiếm</span>
-        </div>
-      </button>
-    </div>
+    <%- include('../components/search-bar.ejs') %>
   </div>
 </header>
+<script src="/scripts/header.js"></script>
