--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -1,13 +1,12 @@
 <header>
-  <div class="container">
+  <div class="container__header">
     <div class="container__header--top">
       <div class="logo-img">
         <img src="/imgs/logo-white.png" alt="" />
       </div>
       <div class="container__nav--top">
-        <ul>
-          <li><a href="#">Trang chủ</a></li>
-          <li><a href="#">Thông báo</a></li>
+          <a href="#">Trang chủ</a></li>
+          <a href="#">Thông báo</a></li>
         </ul>
       </div>
       <div class="top-authenticator">
@@ -23,53 +22,8 @@
             <img src="../img/row-1-column-6.png" alt="" /> -->
       </div>
     </div>
-
-    <div class="main--search">
-      <div class="search__wrapper">
-        <div class="search-address">
-          <span class="material-symbols-outlined"> location_on </span>
-          <input class="input_address" type="text" placeholder="Nơi muốn đến" />
-        </div>
-
-        <div class="search-address">
-          <span
-            class="material-symbols-outlined"
-            style="
-              border-left: 1px solid #085457;
-              padding: 5px;
-              margin-top: -5px;
-            "
-          >
-            calendar_month
-          </span>
-          <input
-            class="input_address"
-            type="text"
-            placeholder="Ngày nhận - Ngày trả"
-          />
-        </div>
-
-        <div class="search-address">
-          <span
-            class="material-symbols-outlined"
-            style="
-              border-left: 1px solid #085457;
-              padding: 5px;
-              margin-top: -5px;
-            "
-          >
-            location_on
-          </span>
-          <input
-            class="input_address"
-            type="text"
-            placeholder="1 người lớn - 0 trẻ em - 1 phòng"
-            style="width: 250px"
-          />
-        </div>
-      </div>
-
-      <button class="button--submit">Tìm kiếm</button>
+    <div>
+    <%- include('../components/search-bar.ejs') %>
     </div>
   </div>
 </header>
