--- a/src/views/pages/acco-detail.ejs
+++ b/src/views/pages/acco-detail.ejs
@@ -81,13 +81,15 @@
         </section>
 
         <section class="room-list">
-            <%- include('../components/room') %>
-            <%- include('../components/room') %>
-            <%- include('../components/room') %>
-            <h2 class="room-list__local-price">Tổng tiền: <span class="highlight">VND 1.500.000</span></h2>
-            <div class="room-list__button">
-                <a class="btn" href="#" role="button">Đặt phòng</a>
-            </div>
+            <form action="#">
+                <%- include('../components/room') %>
+                <%- include('../components/room') %>
+                <%- include('../components/room') %>
+                <h2 class="room-list__local-price">Tổng tiền: <span class="highlight">VND 1.500.000</span></h2>
+                <div class="room-list__submit">
+                    <button type="submit" class="btn room-list__submit-button">Đặt phòng</button>
+                </div>
+            </form>
         </section>
 
         <section class="general-info">
@@ -127,7 +129,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/register.js"></script>
+    <script src="/scripts/room.js"></script>
 </body>
 
 </html>
