Fix input of review-popup and border img of room-in-hs

--- a/src/public/styles/components/review-popup.css
+++ b/src/public/styles/components/review-popup.css
@@ -127,38 +127,35 @@
     height: 72px;
 }
 
+textarea.form-control {
+    height: 224px;
+    &:hover {
+        box-shadow:
+            0 1px 3px 1px rgba(0, 0, 0, 0.2),
+            0 0 2px 0 rgba(0, 0, 0, 0.2);
+    }
+    &:active {
+        box-shadow:
+            0 1px 3px 1px rgba(0, 0, 0, 0.2),
+            0 0 2px 0 rgba(0, 0, 0, 0.2);
+    }
+}
 .review-quality p {
     margin: 0;
     padding: 0;
 }
 
-.custom-input {
-    position: relative;
-}
-
 .input--detail {
-    height: 224px;
-    padding: 10px;
-    z-index: 1; /* Đặt z-index để đặt lớp input trên placeholder */
+    color: #6f7979;
+    font-size: 22px;
+    font-weight: 500;
 }
 
-.input--detail:focus + .custom-input::before {
+.input--detail:focus {
     top: -10px;
     left: 10px;
     font-size: 16px;
     color: #000;
-}
-
-.custom-input::before {
-    content: "Mô tả cụ thể trải nghiệm của bạn tại đây.";
-    position: absolute;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    color: #999;
-    padding: 10px;
-    font-weight: 500;
-    transition: all 0.3s;
 }
 
 @keyframes modalFadeIn {
