--- a/src/views/components/review-popup.ejs
+++ b/src/views/components/review-popup.ejs
@@ -36,8 +36,13 @@
           <span class="plus">+</span>
         </div>
       </div>
-      <div class="custom-input">
-        <input type="text" class="form-control input--detail" placeholder="" />
+      <div class="form-outline custom-input">
+        <textarea
+          class="form-control"
+          id="textAreaExample input--detail"
+          placeholder="Mô tả trải nghiệm của bạn tại đây."
+          rows="4"
+        ></textarea>
       </div>
 
       <div class="form--submitbutton">
