--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -23,12 +23,16 @@ header {
     z-index: 1;
     top: 0;
 }
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
+    width: 80vw;
+    max-width: 1152px;
+    padding: 0;
 }
+
 .container__header--top {
     display: flex;
     align-items: center;
@@ -76,11 +80,13 @@ header {
 .container__nav--top a {
     color: #ffffff;
 }
+
 .top-authenticator {
     display: flex;
     align-items: center;
     gap: 8px;
 }
+
 /* Header with no login*/
 .top-authenticator button {
     width: 128px;
@@ -147,7 +153,7 @@ header {
     display: flex;
     margin-top: 55px;
     /* padding: 8px; */
-    width: 1152px;
+    width: 100%;
 }
 
 .top-authenticator button:hover {
