--- a/src/views/pages/account-page/change-password.ejs
+++ b/src/views/pages/account-page/change-password.ejs
@@ -89,7 +89,6 @@
               type="text"
               placeholder="Nhập mật khẩu mới"
             />
-            <div class="error-message" id="error-message"></div>
           </div>
 
           <div class="form--item">
@@ -99,8 +98,12 @@
               type="text"
               placeholder="Nhập lại mật khẩu mới"
             />
-            <div class="error-message" id="error-message"></div>
           </div>
+          <div
+            class="error-message"
+            id="error-message"
+            style="width: 100%; text-align: end; font-style: italic"
+          ></div>
         </div>
         <div class="form--submitbutton">
           <button class="form--submit1 cancelBtn">Hủy</button>
