--- a/src/views/pages/site/about-us.ejs
+++ b/src/views/pages/site/about-us.ejs
@@ -8,12 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/pages/about-us.css" />
+    <link rel="stylesheet" href="/styles/pages/site/about-us.css" />
 </head>
 
 <body>
-    <%- include('../partials/header-small') %>
-    <%- include('../partials/nav-tree', { nav_tree__data }) %>
+    <%- include('../../partials/header-small') %>
 
     <main>
         <!-- <section id="discover-section" class="mt-64 primary-text">
@@ -125,7 +124,7 @@
         </section>
     </main>
     <div class="mt-12"></div>
-    <%- include('../partials/footer') %>
+    <%- include('../../partials/footer') %>
 </body>
 
 </html>
