--- a/src/views/pages/site/forgot-password.ejs
+++ b/src/views/pages/site/forgot-password.ejs
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>2WAYS.com</title>
-    <link rel="stylesheet" href="/styles/pages/forgot-password.css">
+    <link rel="stylesheet" href="/styles/pages/site/forgot-password.css">
 </head>
 
 <body>
-    <%- include('../partials/header-small-title', {title}) %>
+    <%- include('../../partials/header-small-title', {title}) %>
 
     <main class="content-container">
         <section class="forgotPassword">
@@ -31,7 +31,7 @@
         </section>
     </main>
 
-    <%- include('../partials/footer', {title}) %>
+    <%- include('../../partials/footer', {title}) %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/scripts/forgot-password.js"></script>
