--- a/src/views/pages/site/register.ejs
+++ b/src/views/pages/site/register.ejs
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/styles/pages/register.css" />
+    <link rel="stylesheet" href="/styles/pages/site/register.css" />
     <title>2WAYS.com</title>
 </head>
 
 <body>
-    <%- include('../partials/header-small-title', {title}) %>
+    <%- include('../../partials/header-small-title', {title}) %>
 
     <main class="content-container">
         <section class="intro">
@@ -72,7 +72,7 @@
         </section>
     </main>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/scripts/register.js"></script>
