--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,40 +1,25 @@
 <footer>
-  <div class="footer__container row">
-    <section id="footer__contact" class="col-lg-6">
-      <h3>2WAYS.com</h3>
-      <p class="mt-8">
-        Việc đặt phòng của bạn là động lực giúp chúng tôi duy trì được công ty.
-      </p>
-      <p class="mt-8">
-        Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội
-      </p>
-      <ul class="contact__social social mt-8">
-        <li>
-          <a href="#"
-            ><img
-              class="social__logo"
-              src="/imgs/brands/fb_logo.webp"
-              alt="Logo Facebook"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              class="social__logo"
-              src="/imgs/brands/insta_logo.png"
-              alt="Logo Instagram"
-          /></a>
-        </li>
-        <li>
-          <a href=" #"
-            ><img
-              class="social__logo"
-              src="/imgs/brands/youtube_logo.png"
-              alt="Logo Youtube"
-          /></a>
-        </li>
-      </ul>
-      <!-- <div class="contact__social social">
+    <div class="footer__container row">
+        <section id="footer__contact" class="col-lg-6">
+            <h3>2WAYS.com</h3>
+            <p class="mt-8">
+                Việc đặt phòng của bạn là động lực giúp chúng tôi duy trì được công ty.
+            </p>
+            <p class="mt-8">
+                Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội
+            </p>
+            <ul class="contact__social social mt-8">
+                <li>
+                    <a href="#"><img class="social__logo" src="/imgs/brands/fb_logo.webp" alt="Logo Facebook" /></a>
+                </li>
+                <li>
+                    <a href="#"><img class="social__logo" src="/imgs/brands/insta_logo.png" alt="Logo Instagram" /></a>
+                </li>
+                <li>
+                    <a href=" #"><img class="social__logo" src="/imgs/brands/youtube_logo.png" alt="Logo Youtube" /></a>
+                </li>
+            </ul>
+            <!-- <div class="contact__social social">
         <a href="#">
           <img class="social__logo" src="/imgs/brands/fb_logo.webp"
             alt="Facebook_" /></a>
@@ -45,42 +30,35 @@
           <img class="social__logo" src="/imgs/brands/youtube_logo.png"
             alt="YouTube"></a>
       </div> -->
-    </section>
+        </section>
 
-    <section id="footer__about" class="col-lg-2">
-      <h3>Công ty</h3>
-      <ul class="about__list">
-        <li class="mt-8 about__link"><a href="#">Về chúng tôi</a></li>
-        <li class="mt-8 about__link"><a href="#">Thông tin đối tác</a></li>
-      </ul>
-      <!-- <div class="about__list">
+        <section id="footer__about" class="col-lg-2">
+            <h3>Công ty</h3>
+            <ul class="about__list">
+                <li class="mt-8 about__link"><a href="#">Về chúng tôi</a></li>
+                <li class="mt-8 about__link"><a href="#">Thông tin đối tác</a></li>
+            </ul>
+            <!-- <div class="about__list">
         <a class="about__link" href="#">Về chúng tôi</a>
         <a class="about__link" href="#">Thông tin đối tác</a>
       </div> -->
-    </section>
+        </section>
 
-    <section id="footer__update" class="col-lg-4">
-      <h3>Cập nhật từ chúng tôi</h3>
-      <p>
-        Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất
-        từ chúng tôi hàng tuần
-      </p>
-      <form action="#" method="POST">
-        <input
-          type="email"
-          name="email_input"
-          id="email_input"
-          class="update__input-field"
-          placeholder="Email của bạn"
-          required
-        />
-        <button class="btn--filled sec" type="submit">
-          <div class="status-layer">
-            <span>Xác nhận</span>
-          </div>
-        </button>
-        <!-- <button class="update__confirm-btn" type="submit">Xác nhận</button> -->
-      </form>
-    </section>
-  </div>
+        <section id="footer__update" class="col-lg-4">
+            <h3>Cập nhật từ chúng tôi</h3>
+            <p>
+                Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất
+                từ chúng tôi hàng tuần
+            </p>
+            <form action="#" method="POST">
+                <input type="email" name="email_input" id="email_input" class="update__input-field" placeholder="Email của bạn" required />
+                <button class="btn--filled sec" type="submit">
+                    <div class="status-layer">
+                        <span>Xác nhận</span>
+                    </div>
+                </button>
+                <!-- <button class="update__confirm-btn" type="submit">Xác nhận</button> -->
+            </form>
+        </section>
+    </div>
 </footer>
