--- a/src/views/components/next-page.ejs
+++ b/src/views/components/next-page.ejs
@@ -1,13 +1,19 @@
 <nav aria-label="Page navigation example ">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link" href="#"><</a>
+      <a class="page-link" href="#"
+        ><span class="material-symbols-outlined"> navigate_before</span></a
+      >
     </li>
     <li class="page-item"><a class="page-link" href="#"> 1</a></li>
     <li class="page-item"><a class="page-link" href="#"> 2</a></li>
     <li class="page-item"><a class="page-link" href="#"> 3</a></li>
     <li class="page-item"><a class="page-link" href="#">...</a></li>
     <li class="page-item"><a class="page-link" href="#">10</a></li>
-    <li class="page-item"><a class="page-link" href="#">></a></li>
+    <li class="page-item">
+      <a class="page-link" href="#"
+        ><span class="material-symbols-outlined"> navigate_next </span></a
+      >
+    </li>
   </ul>
 </nav>
