--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -44,8 +44,9 @@ header {
 }
 
 .container__nav--top a {
-  font-size: 24px;
+  font-size: 22px;
   text-decoration: none;
+  font-weight: 500;
   color: white;
 }
 
