--- a/src/public/styles/variables.css
+++ b/src/public/styles/variables.css
@@ -7,4 +7,5 @@
     --link: #0d6efd;
     --green-gradient: linear-gradient(90deg, #085457 27%, #2B8184 60%, #59BDC0 93%);
     --green: #119726;
+    --black: #000000;
 }
