--- a/src/views/pages/site/about-us.ejs
+++ b/src/views/pages/site/about-us.ejs
@@ -13,15 +13,10 @@
 
 <body>
     <%- include('../../partials/header-small') %>
+    
+    <%- include('../../partials/nav-tree', { nav_tree__data }) %>
 
     <main>
-        <!-- <section id="discover-section" class="mt-64 primary-text">
-      <h1 class="section__title">Khám phá về 2Way</h1>
-    </section>
-    <section id="banner" class="mt-64">
-      <img class="banner__img" src="/imgs/banner.png" alt="" />
-      <img class="banner__logan" src="/imgs/banner__logan.svg" alt="" />
-    </section> -->
         <img class="homepage__banner" src="/imgs/banner.png" alt="Banner">
         <section>
             <div class="about__container">
