Up payment page and fix header full, header medium and margin-bottom of aside--section of account page from 16px to 12px

--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -79,10 +79,8 @@ header {
   background-color: #fe9c0b;
   margin: 4px;
   &:hover {
-    box-shadow:
-      0 1px 3px 1px rgba(0, 0, 0, 0.2),
-      0 0 2px 0 rgba(0, 0, 0, 0.2);
-  }
+       box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
+}
 }
 
 /* Header with login*/
