--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -9,6 +9,7 @@ header {
   height: 240px;
   position: no-repeat;
   position: contain;
+  background-image: url("/imgs/bg-header.png");
   background-color: #085457;
   top: 0;
 }
