--- a/src/public/styles/components/search-bar.css
+++ b/src/public/styles/components/search-bar.css
@@ -5,7 +5,9 @@
 }
 
 .top-authenticator button:hover {
-    box-shadow: 1px 2px rgba(0, 0, 0, 0.7);
+    box-shadow:
+        0 -1px 3px 1px rgba(0, 0, 0, 0.2),
+        0 0 2px 0 rgba(0, 0, 0, 0.2);
     transition: 0.2s;
 }
 
