--- a/src/views/components/room.ejs
+++ b/src/views/components/room.ejs
@@ -69,7 +69,7 @@
     </div>
 
     <div class="modal fade" id="room-detail" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered ">
+        <div class="modal-dialog modal-xl modal-dialog-centered ">
             <div class="modal-content">
                 <div class="modal__view">
                     <h1>Phòng hạng sang</h1>
@@ -156,5 +156,4 @@
             </div>
         </div>
     </div>
-</div>
 </div>
