--- a/src/views/components/review-popup.ejs
+++ b/src/views/components/review-popup.ejs
@@ -20,11 +20,10 @@
       </div>
 
       <div class="review-quality">
-        <p>Đánh giá chất lượng ( từ 0 đến 10 )
-        </p>
+        <p>Đánh giá chất lượng (Có thể nhập hoặc chọn từ 0 đến 10)</p>
         <div class="counter--wraper">
           <span class="minus">-</span>
-          <span class="number">10</span>
+          <input type="number" value="10" id="room__quantity" class="">
           <span class="plus">+</span>
         </div>
       </div>
