--- a/src/views/pages/site/search-results.ejs
+++ b/src/views/pages/site/search-results.ejs
@@ -254,8 +254,8 @@
 
                 <div class="filter_price">
                     <div class="search-results__filter__item" id="filter__item-price">
-                        <p class="search-results__filter__content">Giá:</p>
-                        <span class="material-symbols-outlined dropdown-button">expand_more</span>
+                        <p class="search-results__filter__content">Giá</p>
+                        <span class="material-symbols-outlined dropdown-button">keyboard_arrow_down</span>
                         <div class="dropdown-content">
                             <a href="#">Cao đến thấp</a>
                             <a href="#">Thấp đến cao</a>
