Change from header small to medium into accountPage, change href of account/payment-account to account/payment

--- a/src/public/styles/components/review-popup.css
+++ b/src/public/styles/components/review-popup.css
@@ -175,6 +175,10 @@ input[type="number"]::-webkit-outer-spin-button {
     color: #000;
 }
 
+.close-popup {
+    cursor: pointer;
+}
+
 /* .custom-input::before {
     content: "Mô tả cụ thể trải nghiệm của bạn tại đây.";
     position: absolute;
