--- a/src/views/components/room-in-hs.ejs
+++ b/src/views/components/room-in-hs.ejs
@@ -43,8 +43,8 @@
             </div>
         </div>
         <div class="button-room__in__hs">
-            <button class="form--submit1">Xem chi tiết</button>
-            <button class="form--submit2 reviewBtn">Đánh giá</button>
+            <button class="form--submit1 detail-btn">Xem chi tiết</button>
+            <button class="form--submit2 review-btn">Đánh giá</button>
         </div>
     </div>
 </div>
