--- a/src/views/pages/account/index.ejs
+++ b/src/views/pages/account/index.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-small') %>
+    <%- include('../../partials/header-medium') %>
 
     <div class="accountpage--container">
         <aside class="aside--wrapper">
