--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-small.ejs') %>
+    <%- include('../../partials/header-medium.ejs') %>
 
     <div class="changepassword--container">
         <aside class="aside--wrapper">
