--- a/src/public/styles/components/next-page.css
+++ b/src/public/styles/components/next-page.css
@@ -1,5 +1,7 @@
+@import url("/styles/base.css");
+
 .page-link {
-    color: black;
+    color: var(--black);
     font-weight: 500;
     background-color: rgba(0, 105, 109, 0.2);
     border-radius: 4px;
@@ -19,8 +21,8 @@
         box-shadow:
             0 1px 3px 1px rgba(0, 0, 0, 0.2),
             0 0 2px 0 rgba(0, 0, 0, 0.2);
-        color: white;
-        background-color: #00696d;
+        color: var(--white);
+        background-color: var(--primary-color-2);
     }
 }
 
