--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -10,7 +10,7 @@ header {
   position: no-repeat;
   position: contain;
   background-image: url("/imgs/bg-header.png");
-  background-color: #085457;
+  background-color: var(--primary-color-1);
   top: 0;
 }
 
@@ -48,7 +48,7 @@ header {
   font-size: 22px;
   text-decoration: none;
   font-weight: 500;
-  color: white;
+  color: var(--white);
 }
 
 .top-authenticator {
@@ -61,8 +61,8 @@ header {
 .top-authenticator button {
   width: 128px;
   height: 48px;
-  background-color: #ffffff;
-  color: #085457;
+  background-color: var(--white);
+  color: var(--primary-color-1);
   font-size: 16px;
   font-weight: 500;
   border-radius: 8px;
@@ -76,8 +76,8 @@ header {
 }
 
 .top-authenticator .button-signup {
-  color: #ffffff;
-  background-color: #fe9c0b;
+  color: var(--white);
+  background-color: var(--primary-color-4);
   margin: 4px;
 
   &:hover {
