--- a/src/public/styles/components/search-bar.css
+++ b/src/public/styles/components/search-bar.css
@@ -1,3 +1,5 @@
+@import url("/styles/base.css");
+
 .main--search {
     display: flex;
     margin-top: 64px;
@@ -12,7 +14,7 @@
 }
 
 .main--search .search__wrapper {
-    background-color: #ffffff;
+    background-color: var(--white);
     border-radius: 8px;
     height: 64px;
     display: flex;
@@ -33,7 +35,7 @@
 }
 
 .search-address span {
-    color: #90a6b1;
+    color: var(--blue-gray);
     width: 24px;
     height: 24px;
     margin-left: 4px;
@@ -41,7 +43,7 @@
 
 .search-address input {
     margin-left: 10px;
-    background-color: #ffffff;
+    background-color: var(--white);
     height: 45px;
     width: 100%;
     border: none;
@@ -59,9 +61,9 @@
 }
 
 .button--submit {
-    background-color: #fe9c0b;
+    background-color: var(--primary-color-4);
     font-size: 16px;
-    color: white;
+    color: var(--white);
     width: 20%;
     height: 64px;
     border-radius: 8px;
