--- a/src/public/styles/pages/account/booking-history.css
+++ b/src/public/styles/pages/account/booking-history.css
@@ -1,4 +1,4 @@
-@import url("/styles/variables.css");
+@import url("/styles/base.css");
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/components/room-in-hs.css");
 @import url("/styles/partials/footer.css");
@@ -8,7 +8,7 @@
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: #000000;
+    color: var(--black);
 }
 
 body {
@@ -34,7 +34,7 @@ body {
     padding: 12px;
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    background: #fff;
+    background: var(--white);
     height: 450px;
 }
 
@@ -56,13 +56,13 @@ body {
 
 .aside--section p:hover {
     border-radius: 8px;
-    background-color: #d9d9d9;
+    background-color: var(--gray);
     transition: 0.3s;
 }
 
 .aside--section p:nth-child(2) {
-    background-color: #004f52;
-    color: white;
+    background-color: var(--primary-color-1);
+    color: var(--white);
     border-radius: 8px;
 }
 
@@ -73,14 +73,14 @@ body {
 }
 
 .aside--item p {
-    color: var(--material-theme-sys-light-error, #ba1a1a);
+    color: var(--red);
     font-weight: 500;
     padding-left: 12px;
 }
 
 .booking--history {
     padding: 24px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
 }
