--- a/src/public/styles/pages/account/index.css
+++ b/src/public/styles/pages/account/index.css
@@ -1,11 +1,11 @@
-@import url("/styles/variables.css");
+@import url("/styles/base.css");
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/partials/footer.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: #000000;
+    color: var(--black);
 }
 
 body {
@@ -25,7 +25,7 @@ body {
 }
 
 hr {
-    background-color: #bec8c9;
+    background-color: var(--outline-variant);
     border-width: 1px;
     width: 98%;
     margin: 14px;
@@ -38,7 +38,7 @@ hr {
     padding: 12px;
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    background: #fff;
+    background: var(--white);
     height: 450px;
 }
 
@@ -60,13 +60,13 @@ hr {
 
 .aside--section p:hover {
     border-radius: 8px;
-    background-color: #d9d9d9;
+    background-color: var(--gray);
     transition: 0.3s;
 }
 
 .aside--section p:first-child {
-    background-color: #004f52;
-    color: white;
+    background-color: var(--primary-color-1);
+    color: var(--white);
     border-radius: 8px;
     padding: 12px;
 }
@@ -78,14 +78,14 @@ hr {
 }
 
 .aside--item p {
-    color: var(--material-theme-sys-light-error, #ba1a1a);
+    color: var(--red);
     font-weight: 500;
     padding-left: 12px;
 }
 
 .form--input {
     padding: 24px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
 }
@@ -103,7 +103,7 @@ hr {
 }
 
 .form-control:disabled::placeholder {
-    color: black;
+    color: var(--black);
 }
 .form--item h1 {
     width: 221px;
@@ -115,13 +115,13 @@ hr {
 
 .form-control:disabled {
     border: none;
-    background-color: white;
+    background-color: var(--white);
 }
 
 .form-control.unfilled:disabled::placeholder {
     border: none;
-    background-color: white;
-    color: #bec8c9;
+    background-color: var(--white);
+    color: var(--outline-variant);
 }
 
 .form--submitbutton {
@@ -133,9 +133,9 @@ hr {
     width: 106px;
     height: 48px;
     border-radius: 8px;
-    color: #fe9c0b;
-    background-color: white;
-    border: 1px solid #fe9c0b;
+    color: var(--primary-color-4);
+    background-color: var(--white);
+    border: 1px solid var(--primary-color-4);
     font-size: 16px;
 }
 
@@ -143,8 +143,8 @@ hr {
     width: 106px;
     height: 48px;
     border-radius: 8px;
-    background-color: #fe9c0b;
-    color: white;
+    background-color: var(--primary-color-4);
+    color: var(--white);
     border: none;
     font-size: 16px;
 }
