--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -1,4 +1,4 @@
-@import url("/styles/variables.css");
+@import url("/styles/base.css");
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/partials/footer.css");
 @import url("/styles/components/bank-account-popup.css");
@@ -7,7 +7,7 @@
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: #000000;
+    color: var(--black);
 }
 
 body {
@@ -27,7 +27,7 @@ body {
 }
 
 hr {
-    background-color: #bec8c9;
+    background-color: var(--outline-variant);
     border-width: 2px;
     width: 100%;
     margin: 12px;
@@ -42,7 +42,7 @@ hr {
     padding: 12px;
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    background: #fff;
+    background: var(--white);
     height: 450px;
 }
 
@@ -64,13 +64,13 @@ hr {
 
 .aside--section p:hover {
     border-radius: 8px;
-    background-color: #d9d9d9;
+    background-color: var(--gray);
     transition: 0.3s;
 }
 
 .aside--section p:nth-child(3) {
-    background-color: #004f52;
-    color: white;
+    background-color: var(--primary-color-1);
+    color: var(--white);
     border-radius: 8px;
     padding: 12px;
 }
@@ -82,14 +82,14 @@ hr {
 }
 
 .aside--item p {
-    color: var(--material-theme-sys-light-error, #ba1a1a);
+    color: var(--red);
     font-weight: 500;
     padding-left: 12px;
 }
 
 .form--input {
     padding: 24px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 75%;
 }
@@ -108,7 +108,7 @@ hr {
     flex-direction: column;
     height: 200px;
     width: 814px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
 }
 
@@ -128,8 +128,8 @@ hr {
     width: 160px;
     height: 48px;
     border-radius: 8px;
-    background-color: #085457;
-    color: white;
+    background-color: var(--primary-color-1);
+    color: var(--white);
     border: none;
     font-size: 16px;
 }
@@ -138,8 +138,8 @@ hr {
     width: 251px;
     height: 48px;
     border-radius: 8px;
-    background-color: #085457;
-    color: white;
+    background-color: var(--primary-color-1);
+    color: var(--white);
     border: none;
     font-size: 16px;
 }
