--- a/src/public/styles/pages/order-payment.css
+++ b/src/public/styles/pages/order-payment.css
@@ -1,4 +1,4 @@
-@import url("/styles/variables.css");
+@import url("/styles/base.css");
 @import url("/styles/partials/header-small.css");
 @import url("/styles/partials/footer.css");
 @import url("/styles/partials/nav-tree.css");
@@ -47,7 +47,7 @@ h1 {
     padding: 12px;
     gap: 4px;
     justify-content: flex-start;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
 }
 
@@ -61,19 +61,19 @@ h1 {
 .filled-start {
     width: 24px;
     height: 24px;
-    color: #fe9c0b;
+    color: var(--primary-color-4);
 }
 
 .unfilled-start {
     width: 24px;
     height: 24px;
-    color: #d9d9d9;
+    color: var(--gray);
 }
 
 .your-booking-detail {
     display: flex;
     flex-direction: column;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 8px;
     width: 100%;
     height: 447px;
@@ -98,7 +98,7 @@ h1 {
 .countdown-time {
     display: flex;
     gap: 4px;
-    color: #ba1a1a;
+    color: var(--red);
     align-items: center;
     padding: 0 12px;
 }
@@ -121,7 +121,7 @@ h1 {
 }
 
 .cost-total .red-line {
-    color: #ba1a1a;
+    color: var(--red);
     text-decoration: line-through;
 }
 .your-choice {
@@ -139,7 +139,7 @@ h1 {
 
 hr {
     width: 96%;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     margin-left: 5px;
 }
 
@@ -155,7 +155,7 @@ hr {
     flex-direction: row;
     gap: 12px;
     padding: 12px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 12px;
 }
 
@@ -181,7 +181,7 @@ hr {
     flex-direction: column;
     gap: 6px;
     padding: 12px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 12px;
     height: 526px;
 }
@@ -220,8 +220,8 @@ hr {
 }
 
 .list-account-title {
-    background-color: #00696d;
-    color: white;
+    background-color: var(--primary-color-1);
+    color: var(--white);
     font-weight: 700;
     gap: 12px;
     padding: 8px 30px;
@@ -237,7 +237,7 @@ hr {
     /* gap: 25px; */
     flex-direction: column;
     padding: 25px 0;
-    border: 1px solid #00696d;
+    border: 1px solid var(-primary-color-2);
     border-radius: 0 0 10px 10px;
 }
 
@@ -249,7 +249,7 @@ hr {
     display: flex;
     flex-direction: column;
     gap: 12px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
     border-radius: 12px;
     padding: 12px;
 }
@@ -268,9 +268,9 @@ hr {
 button.check-info {
     width: 197px;
     height: 48px;
-    color: #fe9c0b;
-    background-color: white;
-    border: 1px solid #fe9c0b;
+    color: var(--primary-color-4);
+    background-color: var(--white);
+    border: 1px solid var(--primary-color-4);
     font-size: 16px;
     font-weight: 500;
     border-radius: 8px;
@@ -279,8 +279,8 @@ button.check-info {
 button.submit-booking {
     width: 197px;
     height: 48px;
-    color: white;
-    background-color: #fe9c0b;
+    color: var(--white);
+    background-color: var(--primary-color-4);
     border: none;
     font-size: 16px;
     font-weight: 500;
@@ -293,11 +293,11 @@ button.submit-booking {
     gap: 12px;
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid #bec8c9;
+    border: 1px solid var(--outline-variant);
 }
 
 .cancel-free {
-    color: #119726;
+    color: var(--green);
     display: flex;
     flex-direction: row;
     gap: 4px;
@@ -310,21 +310,19 @@ button.submit-booking {
 }
 
 .method-choice input {
-    background-color: white;
+    background-color: var(--white);
     border-radius: 50px;
-    border: 2px solid #00696d;
-    /* width: 23px;
-    height: 23px; */
+    border: 2px solid var(--primary-color-2);
     margin-bottom: 5px;
 }
 
 .form-check-input:checked {
-    background-color: #00696d;
-    border-color: #00696d;
+    background-color: var(--primary-color-2);
+    border-color: var(--primary-color-2);
 }
 
 .form-check-input:focus {
-    border-color: #00696d;
+    border-color: var(--primary-color-2);
     outline: 0;
     box-shadow:
         0 1px 3px 1px rgba(0, 0, 0, 0.2),
@@ -340,7 +338,7 @@ button.submit-booking {
     display: none;
     top: 100%;
     left: 0;
-    background-color: white;
+    background-color: var(--white);
     z-index: 10;
 }
 
@@ -354,14 +352,14 @@ button.submit-booking {
 }
 
 .account-item:hover {
-    background-color: #bec8c9;
+    background-color: var(--outline-variant);
     border-radius: 8px;
 }
 
 .account-item.active {
-    background-color: #00696d;
+    background-color: var(--primary-color-2);
     border-radius: 8px;
-    color: white;
+    color: var(--white);
 }
 
 .form-check-input {
